testCases/semanticAnalyzerTestCases/correct/typeCompatability.cs16
/*
    Chris Kaebe, March 3rd 2016
*/
int main(void){
    int x1 ,x ,y;
    bool a, b;

    x := 1;
    y := 2;
    x1 := x + y;

    a := true;
    b := false;

    writebool(a and b);

    return 666;
}