testCases/semanticAnalyzerTestCases/error/arrayIndexs.cs16
/*
     This test var tail
     Author: Chris Kaebe
     Date: Feb 21, 2016
 */

 int main(void){
     int x[5];
     bool b[10];

     x[1] := x[6];

     x[12] := x[5];

     x[13453] := x[42345];

     if( b[11] )
         x[12] := b[14];

     if( x[11] )
         b[12] := x[14];

     b[1] := b[6];

     b[12] := b[15];

     b[2] := b[245];

     b[954] := b[1];

     return x[1343];
 }